Update:   - Update: Emoji Love   - Update: Remove italic emoji lol   - Update: Export PDF

--- a/templates/Pages/index.html.twig
+++ b/templates/Pages/index.html.twig
@@ -73,8 +73,8 @@
   
   <div class="power-by-content">
     {# <a class="baseline" href="https://github.com/mbeurel/cv">Powered<br/> by<br/> HTML & CSS</a> #}
-    <a class="baseline" href="https://github.com/mbeurel/cv">Crafted <br/>with <span class="little">❤️</span> using<br/> HTML & CSS</a>
-    <span class="punchline">Je n’allais quand même pas le faire sur Word 😉</span>
+    <a class="baseline" href="https://github.com/mbeurel/cv">Crafted <br/>with <span class="little">♥️</span> using<br/> HTML & CSS</a>
+    <span class="punchline"><em>Je n’allais quand même pas le faire sur Word</em> 😆</span>
   </div>
   
   
@@ -93,9 +93,7 @@
         theme="lg"
       >
         <twig:block name="content">
-          <p>Développeur Full Stack senior avec plus de <strong>15 ans d’expérience</strong>, spécialisé en <strong>Symfony</strong> et dans le <strong>développement d’applications web sur mesure</strong>.</p>
-          <p>Solide expérience dans la <strong>conception d’architectures complexes</strong>, l’<strong>intégration front-end responsive</strong> et <strong>pixel perfect</strong>, ainsi que le d<strong>éploiement d’environnements</strong> Docker.</p>
-          <p>Contributeur <strong>OpenSource</strong>, passionné par la <strong>performance</strong>, l’<strong>accessibilité numérique</strong> et l’<strong>optimisation continue</strong> des projets digitaux.</p>
+          <p>Développeur Full Stack senior avec plus de <strong>15 ans d’expérience</strong>, spécialisé en <strong>Symfony</strong> et dans le <strong>développement d’applications web sur mesure</strong>. Solide expérience dans la <strong>conception d’architectures complexes</strong>, l’<strong>intégration front-end responsive</strong> et <strong>pixel perfect</strong>, ainsi que le <strong>déploiement d’environnements</strong> Docker. Contributeur <strong>OpenSource</strong>, passionné par la <strong>performance</strong>, l’<strong>accessibilité numérique</strong> et l’<strong>optimisation continue</strong> des projets digitaux.</p>
         </twig:block>
       </twig:Text>
     </twig:block>
